# GreatestPrime

./: .travis.yml  CMakeLists.txt  README.md
src/: LargestPrime.cpp  LargestPrime.h  isPrime.cpp  isPrime.h  main.cpp
